@@ -53,6 +53,8 @@ connection_check = 1.0
 strength = 0.50
 ; single (1), double (2) or triple (3) exponential moving average filter
 order = 2
+; factor for modifying filtering in vertical direction (>= 0.0)
+vertical_factor = 1.0
 
 [rotation_filter]
 ; value between 0.0 (filter off) and 1.0 (initial rotation is never changed)
